--- a/CMPUT301Project/res/layout/activity_main_menu_view.xml
+++ b/CMPUT301Project/res/layout/activity_main_menu_view.xml
@@ -4,11 +4,43 @@
     android:layout_height="match_parent"
     tools:context=".MainMenuView" >
 
-    <TextView
+    <EditText
+        android:id="@+id/editText1"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="28dp"
+        android:ems="10" 
+        android:hint="@string/searchText">
+
+        <requestFocus />
+    </EditText>
+
+    <CheckBox
+        android:id="@+id/checkBox1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editText1"
+        android:layout_below="@+id/editText1"
+        android:layout_marginTop="21dp"
+        android:text="@string/advancedSearchCheck" />
+
+    <Button
+        android:id="@+id/Button01"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button1"
+        android:layout_below="@+id/button1"
+        android:layout_marginTop="20dp"
+        android:text="@string/pantry" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="@string/hello_world" />
+        android:text="@string/recipes" />
 
 </RelativeLayout>
