--- a/CMPUT301Project/res/layout/activity_main_menu_view.xml
+++ b/CMPUT301Project/res/layout/activity_main_menu_view.xml
@@ -5,7 +5,7 @@
     tools:context=".MainMenuView" >
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/searchEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -18,14 +18,14 @@
     </EditText>
 
     <CheckBox
-        android:id="@+id/checkBox1"
+        android:id="@+id/inPantrySearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText1"
-        android:layout_below="@+id/editText1"
+        android:layout_alignLeft="@+id/searchEditText"
+        android:layout_below="@+id/searchEditText"
         android:layout_marginTop="21dp"
-        android:text="@string/advancedSearchCheck" />
-
+        android:text="@string/inPantrySearchCheck" />
+    
     <Button
         android:id="@+id/Button01"
         android:layout_width="200dp"
@@ -35,12 +35,22 @@
         android:layout_marginTop="20dp"
         android:text="@string/pantry" />
 
+    <CheckBox
+        android:id="@+id/localSearchOnly"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/inPantrySearch"
+        android:layout_below="@+id/inPantrySearch"
+        android:layout_marginTop="16dp"
+        android:text="@string/localSearchText" />
+
     <Button
         android:id="@+id/button1"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_alignRight="@+id/searchEditText"
+        android:layout_below="@+id/localSearchOnly"
+        android:layout_marginTop="62dp"
         android:text="@string/recipes" />
 
 </RelativeLayout>
