--- a/CMPUT301Project/res/layout/activity_main_menu_view.xml
+++ b/CMPUT301Project/res/layout/activity_main_menu_view.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     tools:context=".MainMenuView" >
 
     <EditText
@@ -12,7 +13,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="28dp"
         android:ems="10"
-        android:hint="@string/searchText" >
+        android:hint="@string/search_text"
+        android:textColor="@color/textColour" >
 
         <requestFocus />
     </EditText>
@@ -24,7 +26,8 @@
         android:layout_alignLeft="@+id/searchEditText"
         android:layout_below="@+id/searchEditText"
         android:layout_marginTop="21dp"
-        android:text="@string/inPantrySearchCheck" />
+        android:text="@string/in_pantry_search_check"
+        android:textColor="@color/textColour" />
 
     <CheckBox
         android:id="@+id/localSearchOnly"
@@ -33,16 +36,8 @@
         android:layout_alignLeft="@+id/inPantrySearch"
         android:layout_below="@+id/inPantrySearch"
         android:layout_marginTop="16dp"
-        android:text="@string/localSearchText" />
-
-    <Button
-        android:id="@+id/myRecipes"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/localSearchOnly"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        android:text="@string/recipes" />
+        android:text="@string/local_search_text"
+        android:textColor="@color/textColour" />
 
     <Button
         android:id="@+id/myPantry"
@@ -51,5 +46,14 @@
         android:layout_below="@+id/myRecipes"
         android:layout_centerHorizontal="true"
         android:text="@string/pantry" />
+
+    <Button
+        android:id="@+id/myRecipes"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/myPantry"
+        android:layout_below="@+id/localSearchOnly"
+        android:layout_marginTop="65dp"
+        android:text="@string/recipes" />
 
 </RelativeLayout>
