--- a/CMPUT301Project/res/layout/activity_my_pantry_view.xml
+++ b/CMPUT301Project/res/layout/activity_my_pantry_view.xml
@@ -2,6 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     tools:context=".MyPantryView" >
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/my_pantry_add_button" />
 
 </RelativeLayout>
