Wrote a lot of the code for the 'My Pantry' view figured I should save and upload while the code is fully functional.
Coding Period: Hours of Coding without sleep X9
Caffeine Update: 'Red Rain' X2

--- a/CMPUT301Project/res/layout/activity_main_menu_view.xml
+++ b/CMPUT301Project/res/layout/activity_main_menu_view.xml
@@ -13,6 +13,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="28dp"
         android:ems="10"
+        android:inputType="textMultiLine"
         android:hint="@string/search_text"
         android:textColor="@color/textColour" >
 
@@ -55,5 +56,6 @@
         android:layout_below="@+id/localSearchOnly"
         android:layout_marginTop="65dp"
         android:text="@string/recipes" />
+
 
 </RelativeLayout>
