--- a/CMPUT301Project/res/values/colors.xml
+++ b/CMPUT301Project/res/values/colors.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <color name="black_overlay">#000000</color>
-    <color name="background">#444444</color>
+    <color name="background">#ffffff</color>
     <color name="textColour">#00eeff</color>
 
 </resources>
