Pushing so I don't lose it all... again

--- a/CMPUT301Project/res/values/colors.xml
+++ b/CMPUT301Project/res/values/colors.xml
@@ -2,6 +2,6 @@
 
     <color name="black_overlay">#000000</color>
     <color name="background">#ffffff</color>
-    <color name="textColour">#00eeff</color>
+    <color name="textColour">#00aacc</color>
 
 </resources>
