--- a/CMPUT301Project/res/layout/activity_create_recipe_view.xml
+++ b/CMPUT301Project/res/layout/activity_create_recipe_view.xml
@@ -1,41 +1,99 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    tools:context=".CreateRecipeView" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/CreateRecipeView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Recipe Name" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/title_activity_create_recipe_view"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/CreateRecipeViewName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/CreateRecipeView"
+        android:text="@string/CreateNewRecipe_Name"
+        android:textSize="20sp" />
 
     <EditText
-        android:id="@+id/editText1"
-        android:layout_width="match_parent"
+        android:id="@+id/CreateRecipeViewNameForm"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/CreateRecipeViewName"
+        android:layout_alignTop="@+id/CreateRecipeViewName"
+        android:layout_toRightOf="@+id/CreateRecipeViewName"
         android:ems="10" >
 
         <requestFocus />
     </EditText>
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/CreateRecipeViewDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Description" />
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/CreateRecipeViewName"
+        android:layout_marginTop="14dp"
+        android:text="@string/CreateNewRecipe_Desc"
+        android:textSize="20sp" />
 
     <EditText
-        android:id="@+id/editText2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textMultiLine" />
-
-    <Button
-        android:id="@+id/button1"
+        android:id="@+id/CreateRecipeViewDescForm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save" />
+        android:layout_alignBottom="@+id/CreateRecipeViewDesc"
+        android:layout_alignRight="@+id/CreateRecipeViewNameForm"
+        android:layout_alignTop="@+id/CreateRecipeViewDesc"
+        android:layout_toRightOf="@+id/CreateRecipeViewDesc"
+        android:ems="10" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/CreateRecipeViewIngList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/CreateRecipeViewDescForm"
+        android:layout_centerHorizontal="true"
+        android:text="@string/CreateNewRecipe_IngList"
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id//CreateRecipeViewAddNewIngredient"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/CreateRecipeViewIngListActual"
+        android:layout_centerHorizontal="true"
+        android:text="@string/CreateRecipeViewAddNewIngredient" />
+
+    <ListView
+        android:id="@+id/CreateRecipeViewIngListActual"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_alignParentLeft="true"
+        android:textSize="5sp"
+        android:layout_below="@+id/CreateRecipeViewIngList" >
+    </ListView>
+
+    <Button
+        android:id="@+id/CreateRecipeViewDeleteIngredient"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id//CreateRecipeViewAddNewIngredient"
+        android:layout_centerHorizontal="true"
+        android:text="@string/CreateRecipeViewDeleteIngredient" />
+
+    <Button
+        android:id="@+id/CreateRecipeViewSubmit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/CreateRecipeViewDeleteIngredient"
+        android:layout_centerHorizontal="true"
+        android:text="@string/CreateRecipeViewSubmit" />
+
+</RelativeLayout>
