--- a/CMPUT301Project/res/layout/activity_create_recipe_view.xml
+++ b/CMPUT301Project/res/layout/activity_create_recipe_view.xml
@@ -29,7 +29,8 @@
         android:layout_alignBottom="@+id/CreateRecipeViewName"
         android:layout_alignTop="@+id/CreateRecipeViewName"
         android:layout_toRightOf="@+id/CreateRecipeViewName"
-        android:ems="10" >
+        android:ems="10" 
+        android:inputMethod="">
 
         <requestFocus />
     </EditText>
