Fixed alot of things that fell back to an older version... Stupid github

--- a/CMPUT301Project/res/layout/activity_create_recipe_view.xml
+++ b/CMPUT301Project/res/layout/activity_create_recipe_view.xml
@@ -29,8 +29,7 @@
         android:layout_alignBottom="@+id/CreateRecipeViewName"
         android:layout_alignTop="@+id/CreateRecipeViewName"
         android:layout_toRightOf="@+id/CreateRecipeViewName"
-        android:ems="10" 
-        android:inputMethod="">
+        android:ems="10" >
 
         <requestFocus />
     </EditText>
