--- a/CMPUT301Project/res/layout/activity_add_new_ingredient_view.xml
+++ b/CMPUT301Project/res/layout/activity_add_new_ingredient_view.xml
@@ -53,18 +53,6 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/textColour" />
 
-    <EditText
-        android:id="@+id/addNewIngredientEditTextDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/addNewIngredientStringDescription"
-        android:layout_alignLeft="@+id/addNewIngredientEditTextQuantity"
-        android:ems="10"
-        android:inputType="textMultiLine" >
-
-        <requestFocus />
-    </EditText>
-
     <TextView
         android:id="@+id/addNewIngredientStringDescription"
         android:layout_width="wrap_content"
@@ -76,13 +64,33 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/textColour" />
 
+    <EditText
+        android:id="@+id/addNewIngredientEditTextDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/addNewIngredient"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/addNewIngredientStringDescription"
+        android:layout_marginBottom="46dp"
+        android:ems="10"
+        android:inputType="textMultiLine" />
+
     <Button
         android:id="@+id/addNewIngredient"
-        android:layout_width="150dp"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="22dp"
+        android:layout_marginBottom="18dp"
+        android:layout_toRightOf="@+id/andNewIngredientCancelButton"
+        android:gravity="center_vertical"
         android:text="@string/addNewIngredientButtonString" />
+
+    <Button
+        android:id="@+id/andNewIngredientCancelButton"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/addNewIngredientEditTextDescription"
+        android:layout_toRightOf="@+id/addNewIngredientStringQuantity"
+        android:text="@string/cancelButton" />
 
 </RelativeLayout>
