Created a dialog for adding ingredients in Create New Recipe

--- a/CMPUT301Project/res/layout/activity_add_new_recipe_description_tab.xml
+++ b/CMPUT301Project/res/layout/activity_add_new_recipe_description_tab.xml
@@ -3,6 +3,7 @@
     android:id="@+id/CreateNewRecipeDescriptionTab"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     android:orientation="vertical" >
 
     <TextView
@@ -45,8 +46,6 @@
         android:inputType="textLongMessage|textMultiLine"
         android:lines="6"
         android:singleLine="false" >
-
-        <requestFocus />
     </EditText>
 
 </RelativeLayout>
