Changes so that blank name and quantity dont break editing an ingredient and creating a ingredient. also added a textview to the addnewingredient xml file

--- a/CMPUT301Project/res/layout/activity_add_new_ingredient_view.xml
+++ b/CMPUT301Project/res/layout/activity_add_new_ingredient_view.xml
@@ -94,4 +94,14 @@
         android:layout_toRightOf="@+id/addNewIngredientStringQuantity"
         android:text="@string/cancelButton" />
 
+    <TextView
+        android:id="@+id/addNewIngredientMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/addNewIngredient"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:gravity="center"
+        android:text="" />
+
 </RelativeLayout>
