--- a/CMPUT301Project/res/layout/activity_add_new_recipe_instruction_tab.xml
+++ b/CMPUT301Project/res/layout/activity_add_new_recipe_instruction_tab.xml
@@ -18,7 +18,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/addNewRecipeInstructionAddButton"
-        android:layout_centerHorizontal="true" >
+        android:layout_centerHorizontal="true"
+        android:background="@color/background" >
 
     </ListView>
 
