--- a/CMPUT301Project/res/layout/activity_add_new_recipe_description_tab.xml
+++ b/CMPUT301Project/res/layout/activity_add_new_recipe_description_tab.xml
@@ -33,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/addNewRecipeNameString"
+        android:layout_toLeftOf="@+id/addNewRecipeDescriptionButtonSet"
         android:layout_toRightOf="@+id/addNewRecipeDescriptionString"
         android:ems="10" />
 
@@ -53,9 +54,8 @@
         android:id="@+id/addNewRecipeDescriptionButtonSet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/addNewRecipeDescriptionEditText"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/addNewRecipeNameEditText"
         android:text="Set" />
 
 </RelativeLayout>
