I got the view recipe view to appear but the tabs are not populating yet.

--- a/CMPUT301Project/res/layout/activity_add_new_recipe_description_tab.xml
+++ b/CMPUT301Project/res/layout/activity_add_new_recipe_description_tab.xml
@@ -44,6 +44,7 @@
         android:layout_alignLeft="@+id/addNewRecipeNameEditText"
         android:layout_alignTop="@+id/addNewRecipeDescriptionString"
         android:ems="10"
+        android:gravity="top"
         android:inputType="textLongMessage|textMultiLine|textAutoComplete|textAutoCorrect|textCapSentences"
         android:lines="12"
         android:singleLine="false" >
