--- a/CMPUT301Project/res/layout/activity_create_new_instruction_view_three.xml
+++ b/CMPUT301Project/res/layout/activity_create_new_instruction_view_three.xml
@@ -10,6 +10,7 @@
         android:layout_height="fill_parent"
         android:layout_marginBottom="20dp"
         android:layout_margin="5dp"
+        android:gravity="top"
         android:layout_above="@+id/addNewRecipeInstructionDialogDelete"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
