--- a/CMPUT301Project/res/layout/activity_create_new_instrution_view_two.xml
+++ b/CMPUT301Project/res/layout/activity_create_new_instrution_view_two.xml
@@ -11,6 +11,7 @@
         android:layout_height="fill_parent"
         android:layout_marginBottom="20dp"
         android:layout_margin="5dp"
+        android:gravity="top"
         android:layout_above="@+id/addNewRecipeInstructionDialogLeft"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
