--- a/CMPUT301Project/res/layout/activity_create_new_instruction_view_three.xml
+++ b/CMPUT301Project/res/layout/activity_create_new_instruction_view_three.xml
@@ -7,31 +7,32 @@
     <MultiAutoCompleteTextView
         android:id="@+id/addNewRecipeInstructionDialogEditText"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_marginBottom="20dp"
-        android:layout_margin="5dp"
-        android:gravity="top"
-        android:layout_above="@+id/addNewRecipeInstructionDialogDelete"
+        android:layout_height="75dp"
+        android:layout_above="@+id/addNewRecipeInstructionDialogCancel"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:ems="10" >
+        android:layout_margin="5dp"
+        android:ems="10"
+        android:gravity="top"
+        android:inputType="textMultiLine|textCapSentences" >
 
-        <requestFocus />
     </MultiAutoCompleteTextView>
 
     <Button
         android:id="@+id/addNewRecipeInstructionDialogDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="138dp"
         android:text="@string/buttonDelete" />
 
     <Button
         android:id="@+id/addNewRecipeInstructionDialogCancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_alignBaseline="@+id/addNewRecipeInstructionDialogDelete"
+        android:layout_alignBottom="@+id/addNewRecipeInstructionDialogDelete"
         android:layout_toRightOf="@+id/addNewRecipeInstructionDialogDelete"
         android:text="@string/cancelButton" />
 
@@ -39,7 +40,8 @@
         android:id="@+id/addNewRecipeInstructionDialogConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_alignBaseline="@+id/addNewRecipeInstructionDialogCancel"
+        android:layout_alignBottom="@+id/addNewRecipeInstructionDialogCancel"
         android:layout_toRightOf="@+id/addNewRecipeInstructionDialogCancel"
         android:text="@string/addNewInstructionButtonString" />
 
