--- a/CMPUT301Project/res/layout/activity_add_new_ingredient_view.xml
+++ b/CMPUT301Project/res/layout/activity_add_new_ingredient_view.xml
@@ -12,7 +12,7 @@
         android:layout_alignTop="@+id/addNewIngredientStringName"
         android:layout_marginRight="16dp"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textCapWords" />
 
     <Spinner
         android:id="@+id/addNewIngredientSpinnerQuantity"
@@ -74,7 +74,7 @@
         android:layout_alignTop="@+id/addNewIngredientStringDescription"
         android:layout_marginBottom="46dp"
         android:ems="10"
-        android:inputType="textMultiLine" />
+        android:inputType="textMultiLine|textCapSentences" />
 
     <Button
         android:id="@+id/addNewIngredient"
