--- a/CMPUT301Project/res/layout/activity_add_new_recipe_description_tab.xml
+++ b/CMPUT301Project/res/layout/activity_add_new_recipe_description_tab.xml
@@ -58,6 +58,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/addNewRecipeNameEditText"
-        android:text="Set" />
+        android:text="@string/set" />
 
 </RelativeLayout>
