Created MySharing and PublishRecipe and ViewRecipeonWeb have httpclient semi working but isnt posting correctly however is executing which is positive which is all in UploadController Gson is correctly converting RecipeListModel into Json format as well.

--- a/CMPUT301Project/res/layout/activity_main_menu_view.xml
+++ b/CMPUT301Project/res/layout/activity_main_menu_view.xml
@@ -54,4 +54,13 @@
         android:layout_centerHorizontal="true"
         android:text="@string/MainMenuSearchButtonString" />
 
+    <Button
+        android:id="@+id/mySharingButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/myPantry"
+        android:layout_alignRight="@+id/myPantry"
+        android:layout_below="@+id/myPantry"
+        android:text="@string/mySharing" />
+
 </RelativeLayout>
