--- a/CMPUT301Project/res/layout/activity_recipes_on_web_view.xml
+++ b/CMPUT301Project/res/layout/activity_recipes_on_web_view.xml
@@ -4,15 +4,12 @@
     android:layout_height="match_parent"
     tools:context=".RecipesOnWebView" >
 
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@+id/webserviceRecipelistView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:ems="10"
-        android:inputType="textMultiLine" />
+        android:layout_alignParentTop="true" >
+    </ListView>
 
 </RelativeLayout>
