Can search for recipes in RecipesOnWebView now

--- a/CMPUT301Project/res/layout/activity_recipes_on_web_view.xml
+++ b/CMPUT301Project/res/layout/activity_recipes_on_web_view.xml
@@ -4,12 +4,40 @@
     android:layout_height="match_parent"
     tools:context=".RecipesOnWebView" >
 
+    <EditText
+        android:id="@+id/WebsearchEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:hint="@string/search_text"
+        android:inputType="textMultiLine"
+        android:textColor="@color/textColour" />
+
     <ListView
         android:id="@+id/webserviceRecipelistView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" >
+        android:layout_below="@+id/WebinPantrySearch" >
+
     </ListView>
+
+    <Button
+        android:id="@+id/WebSearchButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/WebsearchEditText"
+        android:layout_centerHorizontal="true"
+        android:text="@string/MainMenuSearchButtonString" />
+
+    <CheckBox
+        android:id="@+id/WebinPantrySearch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/WebSearchButton"
+        android:layout_centerHorizontal="true"
+        android:text="@string/in_pantry_search_check"
+        android:textColor="@color/textColour" />
 
 </RelativeLayout>
