--- a/CMPUT301Project/res/layout/activity_my_sharing_view.xml
+++ b/CMPUT301Project/res/layout/activity_my_sharing_view.xml
@@ -24,9 +24,8 @@
         android:id="@+id/QueryRecipebutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/viewRecipesonWebButton"
-        android:layout_alignRight="@+id/viewRecipesonWebButton"
         android:layout_below="@+id/viewRecipesonWebButton"
-        android:text="@string/QueryRecipeButton" />
+        android:layout_centerHorizontal="true"
+        android:text="@string/querytextview" />
 
 </RelativeLayout>
