Added the pictures

--- a/CMPUT301Project/res/layout/activity_add_new_recipe_picture_tab.xml
+++ b/CMPUT301Project/res/layout/activity_add_new_recipe_picture_tab.xml
@@ -40,4 +40,10 @@
         android:layout_height="wrap_content"
         android:text="GeneratePic" />
 
+    <ListView
+        android:id="@+id/photoListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
+
 </LinearLayout>
