--- a/CMPUT301Project/res/layout/activity_add_new_recipe_picture_tab.xml
+++ b/CMPUT301Project/res/layout/activity_add_new_recipe_picture_tab.xml
@@ -2,16 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-
-    
-    <ImageView
-        android:id="@+id/recipeImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left|top"
-        android:contentDescription="Picture"
-        android:src="@drawable/ic_launcher" />
+    android:orientation="vertical"
+    android:background="@color/background" >
 
     <RelativeLayout
         android:layout_width="match_parent"
