Created all the button view so that they can be clicked on

--- a/CMPUT301Project/res/layout/activity_add_new_recipe_instruction_tab.xml
+++ b/CMPUT301Project/res/layout/activity_add_new_recipe_instruction_tab.xml
@@ -21,8 +21,5 @@
         android:layout_above="@+id/addNewRecipeInstructionAddButton"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_centerHorizontal="true" >
-
-    </ListView>
-
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
