--- a/CMPUT301Project/res/layout/activity_add_new_recipe_instruction_tab.xml
+++ b/CMPUT301Project/res/layout/activity_add_new_recipe_instruction_tab.xml
@@ -8,10 +8,11 @@
 
     <Button
         android:id="@+id/addNewRecipeInstructionAddButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:background="@drawable/button_t"
         android:text="@string/addNewInstructionButtonString" />
 
     <ListView
