--- a/CMPUT301Project/res/layout/activity_add_new_ingredient_view.xml
+++ b/CMPUT301Project/res/layout/activity_add_new_ingredient_view.xml
@@ -69,39 +69,44 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/addNewIngredient"
-        android:gravity="top"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/addNewIngredientStringDescription"
         android:layout_marginBottom="46dp"
         android:ems="10"
+        android:gravity="top"
         android:inputType="textMultiLine|textCapSentences" />
-
-    <Button
-        android:id="@+id/addNewIngredient"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="18dp"
-        android:layout_toRightOf="@+id/andNewIngredientCancelButton"
-        android:gravity="center_vertical"
-        android:text="@string/addNewIngredientButtonString" />
-
-    <Button
-        android:id="@+id/andNewIngredientCancelButton"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/addNewIngredientEditTextDescription"
-        android:layout_toRightOf="@+id/addNewIngredientStringQuantity"
-        android:text="@string/cancelButton" />
 
     <TextView
         android:id="@+id/addNewIngredientMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/addNewIngredient"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:gravity="center"
+        android:layout_above="@+id/buttonLayout"
         android:text="" />
+
+    <LinearLayout
+        android:id="@+id/buttonLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
+        android:layout_alignParentBottom="true" >
+
+        <Button
+            android:id="@+id/andNewIngredientCancelButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:background="@drawable/button_tr"
+            android:text="@string/cancelButton" />
+
+        <Button
+            android:id="@+id/addNewIngredient"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:background="@drawable/button_tl"
+            android:text="@string/addNewIngredientButtonString" />
+    </LinearLayout>
 
 </RelativeLayout>
