--- a/CMPUT301Project/res/layout/activity_create_new_instrution_view_two.xml
+++ b/CMPUT301Project/res/layout/activity_create_new_instrution_view_two.xml
@@ -9,30 +9,33 @@
         android:id="@+id/addNewRecipeInstructionDialogTwoEditText"
         android:layout_width="fill_parent"
         android:layout_height="75dp"
-        android:layout_above="@+id/addNewRecipeInstructionDialogRight"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_margin="5dp"
         android:ems="10"
         android:gravity="top"
         android:inputType="textMultiLine|textCapSentences" >
-
     </MultiAutoCompleteTextView>
 
-    <Button
-        android:id="@+id/addNewRecipeInstructionDialogRight"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/addNewRecipeInstructionDialogLeft"
-        android:layout_alignBottom="@+id/addNewRecipeInstructionDialogLeft"
-        android:layout_toRightOf="@+id/addNewRecipeInstructionDialogLeft" />
+    <LinearLayout
+        android:id="@+id/buttonLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
+        android:layout_alignParentBottom="true" >
 
-    <Button
-        android:id="@+id/addNewRecipeInstructionDialogLeft"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/addNewRecipeInstructionDialogTwoEditText"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="118dp" />
+        <Button
+            android:id="@+id/addNewRecipeInstructionDialogLeft"
+            android:layout_width="0dip"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.5"
+            android:background="@drawable/button_tr" />
+
+        <Button
+            android:id="@+id/addNewRecipeInstructionDialogRight"
+            android:layout_width="0dip"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.5"
+            android:background="@drawable/button_tl" />
+    </LinearLayout>
 
 </RelativeLayout>
