--- a/CMPUT301Project/res/layout/plist_row.xml
+++ b/CMPUT301Project/res/layout/plist_row.xml
@@ -8,7 +8,7 @@
  android:id="@+id/listImage"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
- android:contentDescription="image"
+ android:contentDescription="@string/image"
  android:layout_marginTop="10dp"
 />
 
