Finish changing the UI for non-menu items may change the colour scheme but that is more of a photoshop thing

--- a/CMPUT301Project/res/layout/activity_my_pantry_view.xml
+++ b/CMPUT301Project/res/layout/activity_my_pantry_view.xml
@@ -17,11 +17,10 @@
 
     <Button
         android:id="@+id/myPantryAddIngredientButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
+        android:background="@drawable/button_t"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="14dp"
         android:text="@string/my_pantry_add_button" />
 
 </RelativeLayout>
