--- a/CMPUT301Project/res/layout/activity_my_recipes_view.xml
+++ b/CMPUT301Project/res/layout/activity_my_recipes_view.xml
@@ -7,10 +7,10 @@
 
     <Button
         android:id="@+id/createRecipeButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
+        android:background="@drawable/button_t"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:text="@string/create_recipe" />
 
     <ListView
