--- a/CMPUT301Project/res/layout/activity_recipes_on_web_view_offline.xml
+++ b/CMPUT301Project/res/layout/activity_recipes_on_web_view_offline.xml
@@ -6,7 +6,7 @@
 
     <EditText
         android:id="@+id/WebOfflinesearchEditText"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -17,17 +17,17 @@
 
     <Button
         android:id="@+id/WebOfflineSearchButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/WebOfflinesearchEditText"
-        android:layout_centerHorizontal="true"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
+        android:background="@drawable/button_tb"
+        android:layout_below="@+id/WebOfflineinPantrySearch"
         android:text="@string/MainMenuSearchButtonString" />
 
     <CheckBox
         android:id="@+id/WebOfflineinPantrySearch"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/WebOfflineSearchButton"
+        android:layout_below="@+id/WebOfflinesearchEditText"
         android:layout_centerHorizontal="true"
         android:text="@string/in_pantry_search_check"
         android:textColor="@color/textColour" />
@@ -37,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/WebOfflineinPantrySearch" >
+        android:layout_below="@+id/WebOfflineSearchButton" >
 
     </ListView>
 
