Small fixes hid the keyboard on activity starts

--- a/CMPUT301Project/res/layout/activity_main_menu_view.xml
+++ b/CMPUT301Project/res/layout/activity_main_menu_view.xml
@@ -6,9 +6,9 @@
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         tools:context=".MainMenuView" >
 
         <EditText
@@ -18,7 +18,8 @@
             android:ems="16"
             android:hint="@string/search_text"
             android:inputType="textMultiLine"
-            android:textColor="@color/textColour" />
+            android:textColor="@color/textColour" >
+        </EditText>
 
         <CheckBox
             android:id="@+id/inPantrySearchCheckBox"
