--- a/CMPUT301Project/res/menu/create_new_recipe_view_menu.xml
+++ b/CMPUT301Project/res/menu/create_new_recipe_view_menu.xml
@@ -3,6 +3,7 @@
     <item
         android:id="@+id/addNewRecipeDoneButton"
         android:showAsAction="always"
+        android:icon="@drawable/ic_action_done"
         android:title="@string/CreateRecipeViewSubmit"/>
 
 </menu>
