--- a/CMPUT301Project/res/menu/view_recipe_view_menu.xml
+++ b/CMPUT301Project/res/menu/view_recipe_view_menu.xml
@@ -2,25 +2,29 @@
 
     <item
         android:id="@+id/options"
-        android:icon="@android:drawable/ic_menu_more"
+        android:icon="@drawable/ic_action_overflow"
         android:showAsAction="always"
         android:title="">
         <menu>
             <item
                 android:id="@+id/ViewRecipeViewEmail"
                 android:showAsAction="always"
+                android:icon="@drawable/ic_action_mail"
                 android:title="@string/email"/>
             <item
                 android:id="@+id/ViewRecipeViewUpload"
                 android:showAsAction="always"
+                android:icon="@drawable/ic_action_share"
                 android:title="@string/upload"/>
             <item
                 android:id="@+id/ViewRecipeViewEdit"
                 android:showAsAction="always"
+                android:icon="@drawable/ic_action_edit"
                 android:title="@string/modify"/>
             <item
                 android:id="@+id/ViewRecipeViewDelete"
                 android:showAsAction="always"
+                android:icon="@drawable/ic_action_delete"
                 android:title="@string/buttonDelete"/>
         </menu>
     </item>
