--- a/CMPUT301Project/res/menu/read_recipe_extension_view_menu.xml
+++ b/CMPUT301Project/res/menu/read_recipe_extension_view_menu.xml
@@ -3,6 +3,7 @@
     <item
         android:id="@+id/ReadRecipeExtensionViewDownload"
         android:showAsAction="always"
+        android:icon="@drawable/download"
         android:title="@string/ReadRecipeExtensionViewDownload"/>
 
 </menu>
