--- a/CMPUT301Project/res/menu/view_recipe_online_view.xml
+++ b/CMPUT301Project/res/menu/view_recipe_online_view.xml
@@ -2,5 +2,6 @@
     <item
         android:id="@+id/RecipeOnlineViewImportMenuButton"
         android:showAsAction="ifRoom"
+        android:icon="@drawable/download"
         android:title="@string/ReadRecipeExtensionViewDownload" />
 </menu>
